==> Magiciakwf/-STM32-OTA-OTA-Freertos-/18FreeRTOS项目/BSP/Serial.c <==
#include "stm32f10x.h"                  // Device header
#include <stdio.h>
#include <stdarg.h>
#include "Serial.h"
#include "FreeRTOS.h"
#include "semphr.h"  // 【必须包含】这是信号量/互斥量的头文件
#include "start_task.h"
#include "task.h"


uint8_t DMA_USART1Buf[DMA_BUFSIZE];
uint8_t DMA_RecvFlag = 0;
uint8_t Serial_RxData;

void Serial_Init(void)
{
	USART_InitTypeDef USART_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_DMA1, ENABLE);
//////////////////注释掉DMA和中断以适配Ymodem///////////////////////
	
//	DMA_InitTypeDef DMA1_InitStructure;
//	DMA1_InitStructure.DMA_BufferSize = DMA_BUFSIZE;
//	DMA1_InitStructure.DMA_DIR = DMA_DIR_PeripheralSRC;//外设到内存
//	DMA1_InitStructure.DMA_M2M = DMA_M2M_Disable;
//	DMA1_InitStructure.DMA_MemoryBaseAddr = (uint32_t)DMA_USART1Buf;
//	DMA1_InitStructure.DMA_MemoryDataSize = 8;
//	DMA1_InitStructure.DMA_MemoryInc = DMA_MemoryInc_Enable;
//	DMA1_InitStructure.DMA_Mode = DMA_Mode_Circular;
//	DMA1_InitStructure.DMA_PeripheralBaseAddr = (uint32_t)(&(USART1->DR));
//	DMA1_InitStructure.DMA_PeripheralDataSize = 8;
//	DMA1_InitStructure.DMA_PeripheralInc = DMA_PeripheralInc_Disable;
//	DMA1_InitStructure.DMA_Priority = DMA_Priority_Medium;
//	DMA_Init(DMA1_Channel5, &DMA1_InitStructure);
//	
//	NVIC_InitTypeDef NVIC_InitStructure;
//	NVIC_InitStructure.NVIC_IRQChannel = USART1_IRQn;
//	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
//	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
//	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 2;
//	NVIC_Init(&NVIC_InitStructure);
///////////////////////////////////////////////////////////////////	
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN_FLOATING;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	
	USART_InitStructure.USART_BaudRate = 115200;
	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
	USART_InitStructure.USART_Mode = USART_Mode_Tx|USART_Mode_Rx;
	USART_InitStructure.USART_Parity = USART_Parity_No;
	USART_InitStructure.USART_StopBits = USART_StopBits_1;
	USART_InitStructure.USART_WordLength = USART_WordLength_8b;
	USART_Init(USART1, &USART_InitStructure);
	
//	USART_DMACmd(USART1, USART_DMAReq_Rx, ENABLE);
//	USART_ITConfig(USART1, USART_IT_IDLE, ENABLE);
//	DMA_Cmd(DMA1_Channel5,ENABLE);
	USART_Cmd(USART1, ENABLE);

}

void Serial_SendByte(uint8_t Byte)
{
	USART_SendData(USART1, Byte);
	while (USART_GetFlagStatus(USART1, USART_FLAG_TXE) == RESET);
}

void Serial_SendArray(uint8_t *Array, uint16_t Length)
{
	uint16_t i;
	for (i = 0; i < Length; i ++)
	{
		Serial_SendByte(Array[i]);
	}
}

void Serial_SendString(char *String)
{
	uint8_t i;
	for (i = 0; String[i] != '\0'; i ++)
	{
		Serial_SendByte(String[i]);
	}
}

uint32_t Serial_Pow(uint32_t X, uint32_t Y)
{
	uint32_t Result = 1;
	while (Y --)
	{
		Result *= X;
	}
	return Result;
}

void Serial_SendNumber(uint32_t Number, uint8_t Length)
{
	uint8_t i;
	for (i = 0; i < Length; i ++)
	{
		Serial_SendByte(Number / Serial_Pow(10, Length - i - 1) % 10 + '0');
	}
}

int fputc(int ch, FILE *f)
{
	Serial_SendByte(ch);
	return ch;
}

void Serial_Printf(char *format, ...)
{
	xSemaphoreTake(PrintfMutex,portMAX_DELAY);//这样的话可以避免资源侵占的问题
	char String[100];
	va_list arg;
	va_start(arg, format);
	vsprintf(String, format, arg);
	va_end(arg);
	Serial_SendString(String);
	xSemaphoreGive(PrintfMutex);
}

uint8_t Serial_GetRxData(void)
{
	Serial_RxData = USART_ReceiveData(USART1);
	return Serial_RxData;			//返回接收的数据变量
}

///////////////注释掉空闲中断服务函数以适配Ymodem////////////////////
//void USART1_IRQHandler(void)
//{
//	volatile uint32_t temp;
//	if(USART_GetFlagStatus(USART1,USART_FLAG_IDLE) == SET)
//	{
//		temp = USART1->SR;
//		temp = USART1->DR;
//		DMA_RecvFlag = 1;
//	}
//}
